kubernetes/apps/home-automation/frigate/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frigate
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: frigate
      app.kubernetes.io/instance: frigate
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: kgateway-internal
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
            - port: "1984"
              protocol: TCP
            - port: "8554"
              protocol: TCP
            - port: "8555"
              protocol: TCP
            - port: "8555"
              protocol: UDP
